--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,734 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&family=Tourney:wght@500&display=swap');
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root{
+  --sidebar-background:#FFFFFF;
+  --internal-tools-font-color:#101010;
+  --logo-color:#151619;
+  --nav-blue:#386CE2;
+  --nav-font:#011B57BF;
+  --nav-list-header:#7A8395;
+  --primary-color:#F0F3F5;
+  --logout-bg:#011B570B;
+  --sidebar-hover:#386CE2;
+  --sidebar-hover-font:#FFFFFF;
+}
+body{
+  position: relative;
+  width:100%;
+  font-size: 13px;
+  font-family: 'Inter', sans-serif;
+  overflow-x: hidden;
+}
+.theme-selector{
+  position: absolute;
+  background-color: var(--sidebar-background);
+  width:5em;
+  height: 2.2em;
+  right:-1.2em;
+  border-radius: 0px 0px 5px 5px;
+  top:70%;
+  transform: rotate(90deg);
+  display:flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: .3em;
+  cursor: pointer;
+}
+.light, .dark{
+  width:45%;
+  height: 100%;
+  border: 5px;
+  border-radius:5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.light i, .dark i{
+  text-align: center;
+  color:#EE9C30;
+  font-size: 15px;
+  padding: 3px;
+}
+.theme-Cbg{
+  background-color: var(--primary-color);
+  transition: .3s ease;
+}
+a{
+  text-decoration: none;
+}
+p,h4{
+  color:var(--nav-font);
+  font-size: 13px;
+}
+.body{
+  display: flex;
+}
+.sidebar-holder{
+  height: 100vh;
+  overflow: auto;
+  position: relative;
+  width:20%;
+  background-color: var(--sidebar-background);
+}
+.sidebar-outer{
+  width:80%;
+  margin:30px auto 10px auto;
+  overflow:auto;
+}
+.logo{
+  font-size: 27px;
+  font-weight: 700;
+  padding-bottom:10px;
+  margin-left: 20px;
+  color:var(--logo-color);
+  cursor: pointer;
+}
+.logo span{
+  color:var(--nav-blue);
+}
+.main-menu-header, .internal-tools-header{
+  padding-top: 15px;
+  font-weight: 500;
+  padding-left: 20px;
+  margin-bottom: 7px;
+  color: var(--nav-list-header);
+  cursor: pointer;
+}
+.internal-tools p, .main-menu-links p{
+  width:100%;
+  border-radius: 25px;
+  margin-bottom: 8px;
+  padding:10px 15px;
+  color:var(--nav-font);
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.internal-tools p .fa, .main-menu-links p .fa{
+  font-size:15px;
+  padding-right: 10px;
+  filter: grayscale(1);
+}
+.internal-tools p{
+  color:var(--internal-tools-font-color);
+}
+.internal-tools p:hover, .main-menu-links p:hover{
+  background-color: var(--sidebar-hover);
+  color:var(--sidebar-hover-font);
+  transition: .5s ease;
+  filter: grayscale(0);
+}
+.internal-tools{
+  margin-bottom:0px;
+}
+.active{
+  background-color: #386CE2;
+}
+.log-out{
+  width:100%;
+  height:45px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: var(--logout-bg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.body-container{
+  height:100vh;
+  background-color:var(--primary-color);
+  width:100%;
+}
+.body-container-outer{
+  width:90%;
+  height:95%;
+  margin:2.5% auto;
+}
+.overview{
+  width:100%;
+  margin: auto;
+  height:40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.overview-top{
+  width:100%;
+  height:40%;
+  display: flex;
+  justify-content: space-between;
+}
+.overview-top-right{
+  position: relative;
+  height: 50%;
+  align-self: flex-start;
+  order: 2;
+  display: flex;
+  align-items: center;
+}
+.overview-top-right img{
+  height:4em;
+  padding:5px 0px;
+  padding-left: 12px;
+  border-left:.1px dotted var(--nav-list-header);
+  cursor: pointer;
+}
+@keyframes example {
+  0%   {transform: rotate(0deg);}
+  50%  {transform: rotate(10deg);}
+  100% {transform: rotate(-10deg);}
+}
+.overview-top-right i{
+  position: relative;
+  color:var(--nav-font);
+  font-size:1.4em;
+  background-color:var(--logout-bg);
+  padding:.8em;
+  border-radius: 50%;
+  margin-right: 12px;
+  animation: example .5s infinite;
+  cursor: pointer;
+}
+.notify-div{
+  position: relative;
+}
+.notification-active{
+  position: absolute;
+  height: .5em;
+  width:.5em;
+  border-radius: 50%;
+  background-color: #EE9C30;
+  right:2em;
+  top:1em;
+}
+.overview-bottom-left{
+  align-self:flex-end;
+  display: block;
+}
+.overview-bottom-left h3{
+  padding-bottom: 7px;
+  font-size:24px;
+  font-weight: 550;
+  color:var(--logo-color)
+}
+h3{
+  color: var(--logo-color);
+}
+.overview-outer-bottom{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.overview-boxes-outer{
+  width:30%;
+  background-color: var(--sidebar-background);
+  border-radius: 4px;
+  position: relative;
+}
+.overview-box h3{
+  font-size:28px;
+  font-weight: 900;
+  padding: 8px 0;
+}
+.overview-box{
+  padding:20px 25px;
+}
+.overview-edge{
+  position: absolute;
+  background-color: var(--nav-blue);
+  width:5em;
+  height:5em;
+  right:0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100% 0 0 0;
+}
+.overview-edge i{
+  font-size: 18px;
+  padding:.6em 0 0 .5em;
+  color:var(--sidebar-background);
+  cursor: pointer;
+}
+.overview-edge-two{
+  background-color:#2CD9C5 ;
+}
+.overview-edge-three{
+  background-color: #de387e;
+}
+.shipment-overview-outer{
+  width:100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 3em;
+}
+.shipments-top{
+  width:100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2em;
+}
+.shipments-text{
+  display: block;
+}
+.shipments-text h3{
+  font-size: 18px;
+  font-weight: 700;
+  padding-bottom: 7px;
+}
+.chart-filter{
+  width:27%;
+  padding:7px 20px;
+  display: flex;
+  align-items: center;
+  font-size: 13px;
+  font-weight: 500;
+  background-color: var(--sidebar-background);
+  border-radius:25px;
+}
+.chart-filter li{
+  list-style: none;
+  padding: 8px 12px;
+  margin:auto 3px;
+  border-radius: 3px;
+  cursor: pointer;
+  font-weight: 600;
+  color:var(--nav-font);
+  transition: .3s ease-in-out;
+}
+.chart-filter-active{
+  background-color: var(--sidebar-hover);
+}
+.chart{
+  height:18em;
+  background-color: var(--sidebar-background);
+  border-radius: 4px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.vehicles-top{
+  margin-bottom: -8.5em;
 }
+.vehicles-outer-bottom{
+  width:100%;
+  border-radius: 5px;
+  background-color: var(--logout-bg);
+}
+.Vfilter-outer{
+  width:100%;
+  height:100%;
+}
+.Vfilter-top{
+  width:95%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom:1px solid var(--primary-color);
+}
+.v-filter-top-list{
+  width:50%;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+.v-filter-top-list li{
+  font-weight: 700;
+  padding: 18px 20px 10px 20px;
+  transition: .3s ease-in-out;
+  border-bottom: 2px solid transparent;
+  color:var(--nav-font);
+}
+.v-filter-top-list li:hover{
+  color:var(--nav-blue);
+  border-bottom:2px solid var(--nav-blue);
+}
+.fa-search{
+  color:var(--nav-font);
+  cursor:pointer;
+  font-size: 18px;
+  font-weight: 600;
+}
+.v-filter-top-list li{
+  list-style: none;
+}
+.Vfilter-bottom{
+  width:100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 12px;
+}
+.vehicle-box-info{
+  width:100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--sidebar-background);
+  border-radius: 3px;
+  padding: 18px 0;
+  margin-bottom: 13px;
+}
+.vehicle-box-info:last-child{
+  margin-bottom: 0;
+}
+.vehicle-info-head{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.vehicle-info-head{
+  font-weight: 700;
+  color:var(--logo-color);
+  padding-bottom: 5px;
+}
+.vehicles-outer-bottom{
+  display: block;
+}
+.vehicle-info-outer-flex{
+  display: flex;
+  align-items: center;
+}
+.vehicle-info-outer-flex i{
+  padding-left: 10px;
+  font-size: 20px;
+  transform:rotateY(180deg);
+  color:var(--logo-color);
+}
+.vehicle-info-outer-flex img{
+  height: 3em;
+  padding-right: 10px;
+}
+.burger{
+  justify-self: flex-end;
+  margin-left: 15px;
+}
+.burger > div{
+  align-self: flex-end;
+  height: 3px;
+  width:3px;
+  border-radius: 50%;
+  display: block;
+  text-align: center;
+  background-color: var(--internal-tools-font-color);
+  margin-bottom: 3px;
+  cursor: pointer;
+}
+.vehicle-info-head-span{
+  width:100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border: .001em solid var(--nav-font);
+  border-radius: 25px;
+  padding: 0 5px;
+  margin-bottom: 5px;
+}
+.vehicle-info-head-span i{
+  color:#2FA072 ;
+  font-size:10px;
+}
+
+.ts{
+  cursor: pointer;
+  text-decoration: underline;
+  padding-top: 5px;
+}
+.span-two{
+  color:#ED2635 !important;
+}
+.span-three{
+  color:#386CE2 !important;
+}
+.onsearch-outer-outer{
+  width:100%;
+  height: 100vh;
+  position:fixed;
+  top:0;
+  left:0;
+  background-color: #00000053;
+  z-index: 100;
+  transition: 5s ease;
+}
+.onsearch-outer-outer-tracking, .onsearch-outer-outer-search{
+  display: none;
+}
+.onsearch-outer{
+  position:relative;
+  left:50%;
+  top:50%;
+  width:50%;
+  padding: 10px 15px 20px 15px;
+  background-color: var(--sidebar-background);
+  border-radius: 4px;
+  transform: translate(-50%,-50%);
+}
+.track-head,.track-text{
+  text-align: center;
+}
+.fa-close{
+  cursor: pointer;
+  font-size: 12px;
+  color:var(--internal-tools-font-color);
+  position: relative;
+  top:1em;
+  left:95%;
+  padding: 3px 5px;
+  border-radius:5px ;
+  border: 1px solid var(--internal-tools-font-color);
+  margin-bottom:5px;
+}
+.fa-close:hover{
+  color: var(--nav-blue);
+  border:1px solid var(--nav-blue);
+  transition: .2s ease-in;
+}
+.track-head{
+  padding:3px 0;
+}
+.track-info{
+  cursor: pointer;
+  width:100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0 35px;
+}
+.track-center{
+  width: 100%;
+  margin: 3em 0;
+  display:flex;
+}
+.track-center-user{
+  padding-right: 5.5em;
+}
+.lighter-bg{
+  background-color: #00000065;
+  align-self: center;
+  justify-self: center;
+}
+.lighter-bg, .light-bg{
+  padding: 25px;
+  background-color: var(--logout-bg);
+  animation: loading .7s infinite;
+}
+.lighter-bg, .light-bg, .search-pop{
+  border-radius: 50%;
+}
+@keyframes loading {
+  0%   {padding:25px;}
+  50%{padding:30px; margin: -5px;}
+  100%  {padding:35px; margin: -10px;}
+}
+.search-pop{
+  padding: 30px;
+  background-color: #011b571a;
+}
+.vehicle-box-info-pop{
+  width:100%;
+  margin-left:-2em;
+}
+.tracking-details{
+  width:85%;
+  margin:30px auto;
+  justify-content: space-between;
+  display: flex;
+  align-items: flex-start;
+}
+.tracking-details-left{
+  width:40%;
+  height:100%;
+  display: flex;
+  flex-direction: column;
+}
+.tracking-details-left > div{
+  padding:0px 5px 12px 0;
+  margin-top: 10px;
+  border-bottom: 1px solid var(--primary-color);
+}
+.tracking-details-left > div:first-child > img{
+  height:2.8em;
+}
+.tracking-details-left > div:last-child{
+  border-bottom: none;
+}
+.tracking-details-left > div > div >h4{
+  padding-bottom:3px;
+}
+.tracking-details-right{
+  position: relative;
+}
+.tracking-details-right img{
+  width: 23em;
+  position: relative;
+}
+.map-pointer{
+  position: absolute;
+  left:20%;
+  top:20%;
+  cursor: pointer;
+}
+.map-pointer-icon{
+  font-size: 8px;
+  padding: 1.4em;
+  border-radius: 50%;
+  border: 1px solid var(--nav-blue);
+  background-color:var(--nav-font) ;
+}
+.tracking-vehicle-box-info{
+  width:85%;
+  justify-content: space-between;
+  margin: auto;
+}
+.view{
+  cursor: pointer;
+  font-size: 11px;
+  align-self: flex-start;
+  padding: 2px 10px;
+  margin-left: 10px;
+  border: 1px solid var(--nav-font);
+  border-radius: 25px;
+}
+.view:hover{
+  font-weight: 700;
+  border: 1px solid var(--internal-tools-font-color);
+  transition: .3s ease;
+}
+.body-container-outer-error{
+  width:100%;
+} 
+.error-outer{
+  width:90%;
+  height: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  z-index: 5;
+}
+.error-text{
+  width:45%;
+  text-align: center;
+  align-self: flex-end;
+  color: var(--logo-color);
+  margin-right: -15em;
+}
+
+.error404-text{
+  font-size: 15em;
+  letter-spacing: 0.06em;
+  font-family: 'Syne Mono', monospace;
+}
+.error-plea{
+  font-size: 20px;
+  letter-spacing: 0.0001em;
+  color: var(--logo-color);
+  font-family: 'Tourney', cursive;
+}
+.back-home{
+  background-color: #EE9C30;
+  width:50%;
+  height:40px;
+  margin:15px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius:3px;
+  color:var(--logo-color);
+  font-weight:700;
+  font-size: 12px;
+  transition: .3s ease;
+}
+.back-home:hover{
+  background-color: #ee9c3093;
+  border: 1px solid #EE9C30;
+}
+.error-image{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.error-image img{
+  height:30em;
+  margin: 30px 0;
+  transform: rotate(-45deg);
+}
+.error-top, .error-bottom{
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 700;
+}
+.error-top span, .error-bottom span{
+  letter-spacing: 0.1em;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  font-family: 'Tourney', cursive;
+}
+.error-bottom{
+  align-self: flex-end;
+  margin-top: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
