--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body{
   width:100%;
   font-size: 13px;
   font-family: 'Inter', sans-serif;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .theme-selector{
   position: absolute;
@@ -126,6 +126,7 @@ p,h4{
 }
 .active p{
   background-color: var(--sidebar-hover);
+  color:var(--sidebar-hover-font);
 }
 .internal-tools{
   margin-bottom:0px;
@@ -312,12 +313,31 @@ h3{
   background-color: var(--sidebar-hover);
 }
 .chart{
-  height:18em;
+  width:100%;
+  padding:0 1.5% 0 3.5%;
+  height:18.5em;
   background-color: var(--sidebar-background);
   border-radius: 4px;
 }
-
-
+.shipments-no{
+  width: 30%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.shipments-no1, .shipments-no2{
+  text-align: center;
+}
+.shipments-no1 h4, .shipments-no2 h4{
+  font-size: 10px;
+  padding-top: 10px;
+  font-weight: 500;
+}
+.shipments-no1 h3, .shipments-no2 h3{
+  font-size: 15px;
+  padding-top: 4px;
+  font-weight: 700;
+}
 .vehicles-top{
   margin-bottom: -8.5em;
 }
@@ -372,6 +392,14 @@ h3{
   align-items: center;
   justify-content: center;
   padding: 12px;
+  overflow-y: auto;
+  max-height: 63vh;
+}
+.Vfilter-bottom::-webkit-scrollbar {
+  display: none;
+}
+.vehicle-box-info-top:first-child{
+  margin-top:56em;
 }
 .vehicle-box-info{
   width:100%;
