--- a/src/index.css
+++ b/src/index.css
@@ -164,16 +164,17 @@ p,h4{
   position: relative;
   width:100%;
   margin: auto;
-  height:40%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
+
 .overview-top{
   width:100%;
   height:40%;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 2em;
 }
 .overview-top-right{
   position: relative;
@@ -221,6 +222,7 @@ p,h4{
 .overview-bottom-left{
   align-self:flex-end;
   display: block;
+  padding-top:3.2em;
 }
 .overview-bottom-left h3{
   padding-bottom: 7px;
@@ -296,7 +298,7 @@ h3{
   padding-bottom: 7px;
 }
 .chart-filter{
-  width:27%;
+  /* width:27%; */
   padding:7px 20px;
   display: flex;
   align-items: center;
@@ -343,9 +345,6 @@ h3{
   font-size: 15px;
   padding-top: 4px;
   font-weight: 700;
-}
-.vehicles-top{
-  margin-bottom: -8.5em;
 }
 .vehicles-outer-bottom{
   width:100%;
@@ -781,7 +780,10 @@ h3{
   .chart-filter {
     width: unset;
     margin-top: 1em;
-}
+  }
+  .overview-top{
+    margin-bottom: 0;
+  }
 }
 
 @media screen and (max-width:499px) {
@@ -824,6 +826,7 @@ h3{
     display: flex;
     justify-content: space-between;
     flex-direction: column-reverse;
+    margin-bottom: 0;
   }
   .overview-bottom-left {
     align-self: flex-start;
@@ -1005,6 +1008,9 @@ h3{
   .burger-2{
     width: 25px;
     margin-top: 3px;
+  }
+  .overview-bottom-left{
+    padding-top:0;
   }
 }
 
