--- a/src/index.css
+++ b/src/index.css
@@ -988,7 +988,7 @@ h3{
     text-align: right;
   }
   .Burger{
-    position: fixed;
+    position: absolute;
     top:3.3em;
     right:2.5em;
     display: flex;
